Alteraçcoes na tela de exibicao de cursos

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,22 @@
-#teste{
-    border: 1px solid red;
+#card-info-courses{
+    /* border: 1px solid red; */
+}
+
+#card-info-courses p{
+    margin: 0;
+}
+
+
+#card-img{
+    background: url(mountain.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+
+#card-img img{
+    width: 100%;
+    height: fit-content;
+    align-items: flex-end;
 }
 
