--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,7 +23,11 @@
     color: #386fb5;
  }
 
-.nav-link{
+.nav-link #item-login{
+    color: black !important;
+}
+
+.nav-link #item-cadastro-b{
     color: black !important;
 }
 
@@ -56,7 +60,8 @@ li{
 
 /* Fim NavBar */
 
-/* Início Carrossel Cursos */
+
+/* Início Carrossel Cursos*/
 
 .text-slide-welcome{
     margin-top: 40px;
@@ -66,10 +71,8 @@ li{
     margin-top: 30px;
 }
 
-.swiper-button-next{
-
-}
 /* Fim Carrossel */
+
 
 
 /* Footer Welcome */
