--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,13 @@
 
 *{
     font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+
+}
+
+
+label{
+    font-size: 14px;
 }
 
 
@@ -40,7 +47,7 @@ li{
 }
 
 #item-login:hover{
-    color: #fff;
+    color: #fff !important;
 }
 
 @media (max-width: 992px){
@@ -101,9 +108,7 @@ height: 200px;
     text-align: right;
 }
 
-#link-footer-list{
-  
-}
+
 
 ul a li{
     color: #000 !important;
@@ -117,9 +122,7 @@ ul a li{
    margin: auto;
 }
 
-#test{
-    justify-content: center;
-}
+
 
 #social-icons-line a img{
    margin: 0 10px;
@@ -146,3 +149,8 @@ ul a li{
     width: 100%;
     height: 150px;
 }
+
+
+
+
+/* Início create course estilização */
