--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,6 @@
 *{
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
-
 }
 
 
@@ -30,10 +29,6 @@ label{
     color: #386fb5;
  }
 
-<<<<<<< HEAD
-=======
-
->>>>>>> 684657625d1359b2a16da081a60d902dab335d99
 .nav-link #item-login{
     color: black !important;
 }
@@ -130,24 +125,13 @@ ul a li{
 
 #social-icons-line a img{
    margin: 0 10px;
-    width: 30px;
+   width: 30px;
 }
 /* Fim Footer Welcome */
 
 
-/* CSS Tela Home */
 
-
-#card-info-courses p{
-    margin: 0;
-}
-
-.card-img{
-    background-repeat: no-repeat;
-    background-size: auto;
-    height: 150px;
-}
-
+/* Cursos Registrados */
 .card-img img{
     border-radius: 2px;
     width: 100%;
@@ -155,6 +139,93 @@ ul a li{
 }
 
 
+/* Tela Open Course */
+
+#img-open-course{
+    width: 300px; 
+    border-radius: 3px;
+    margin-bottom: 30px;
+}
+
+.background-open-course{
+    background-color: #fff;
+    padding: 30px 10px;
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 0 1px rgba(167, 167, 167, 0.13), 0 1px 3px rgba(155, 155, 155, 0.2);
+}
+
+.clasroom{
+    padding: 0 !important;
+}
+
+/* Tela Open My courses */
+
+#informations-open-my-courses{
+    margin: auto;
+}
+
+#image-open-my-courses{
+    border-radius: 5px;
+}
+
+#colum-background-white{
+    background-color: #fff;
+    padding: 30px 10px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    box-shadow: 0 0 1px rgba(114, 114, 114, 0.13), 0 1px 3px rgba(110, 110, 110, 0.2);
+}
 
 
-/* Início create course estilização */
+/* Reproduction Vídeo */
+
+#div-list-reproduction{
+    margin: 0;
+    padding: 0;
+}
+
+
+
+#div-list-reproduction ul{
+    margin: 0;
+    padding: 0;
+}
+
+
+
+#div-list-reproduction ul li{
+    margin: 0px 0px 2px 0px !important;
+    padding: 14px;
+    height: 50px;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    margin-bottom: 1px;
+    list-style: none;
+    
+}
+
+#div-list-reproduction ul li p{
+    margin: 0;
+}
+
+
+#div-list-reproduction li:hover{
+    background: rgb(0, 0, 0) !important;
+    transition: 0.5s;
+}
+
+.row-reproduction{
+    background: #fff;
+    padding: 10px 5px;
+}
+
+
+@media (max-width: 575px){
+    
+
+    #div-list-reproduction ul li{
+        /* width: ; */
+    }
+}
