Ajuste nos cards e demais telas com problemas na responsividade

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -370,3 +370,11 @@ ul a li {
         padding-top: 20px;
     }
 }
+
+/* Tela Profile */
+
+.preview-image{
+    /* clip: rect (top, right, bottom, left); */
+    
+}
+    
